--- a/src/app/admin/eliminar-libros-admin/eliminar-libros-admin.page.scss
+++ b/src/app/admin/eliminar-libros-admin/eliminar-libros-admin.page.scss
@@ -17,5 +17,6 @@ h1{
     color: #6D4C41;
     text-align: center;    
     font-size: 25px;
+    line-height: 1.2;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
 }
