--- a/src/app/pages/modificar-perfil-usuario/modificar-perfil-usuario.page.html
+++ b/src/app/pages/modificar-perfil-usuario/modificar-perfil-usuario.page.html
@@ -70,6 +70,11 @@
         >Cambiar Perfil</ion-button
       >
     </form>
-
+    <div class="container-p">
+      <p *ngIf="correoValido">-Ingrese un correo válido</p>
+      <p *ngIf="contraValida">-La contraseña debe tener al menos 8 caracteres, incluyendo una mayúscula, una minúscula, un número y un carácter especial.</p>
+      <p *ngIf="contraIgual">-Las contraseñas no coinciden, intentelo nuevamente.</p>
+      <p *ngIf="contraMisma">-No puede usar datos de su usuario anterior</p>
+    </div>
   </div>
 </ion-content>
