--- a/src/app/pages/notfound/notfound.page.html
+++ b/src/app/pages/notfound/notfound.page.html
@@ -3,13 +3,15 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>notfound</ion-title>
+    <ion-title>ERROR 404</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  
-  <h1>Pagina no encontrada</h1>
-  <ion-button shape="round" color="danger" >Volver al inicio</ion-button>
 
+  <div class="container">
+    <h1>Pagina no encontrada</h1>
+    <img src="assets/img/notfound.png" alt="" class="image">
+    <ion-button shape="round" color="danger" [routerLink]="['/feed']">Volver al inicio</ion-button>
+  </div>
 </ion-content>
