--- a/src/app/pages/registrarse/registrarse.page.html
+++ b/src/app/pages/registrarse/registrarse.page.html
@@ -74,8 +74,11 @@
 
       
     </form>
+    <div class="container-p">
       <p *ngIf="correoValido">-Ingrese un correo válido</p>
-      <p *ngIf="contraValida">-La contraseña debe tener al menos 6 caracteres, incluyendo una mayúscula, una minúscula, un número y un carácter especial.</p>
+      <p *ngIf="contraValida">-La contraseña debe tener al menos 8 caracteres, incluyendo una mayúscula, una minúscula, un número y un carácter especial.</p>
       <p *ngIf="contraIgual">-Las contraseñas no coinciden, intentelo nuevamente.</p>
+    </div>
+    
   </div>
 </ion-content>
