--- a/src/app/pages/cambiar-contra/cambiar-contra.page.scss
+++ b/src/app/pages/cambiar-contra/cambiar-contra.page.scss
@@ -36,5 +36,7 @@ h1{
   color: black;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
+  font-size: 20px;
+  line-height: 1.2;
   
 }
