ahora si ultimo ultimo commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,13 +69,10 @@
     
         <ion-item button [routerDirection]="'root'" [routerLink]="['/editar-borrar-libro-admin']" >
           <ion-icon slot="start" name="cloud-upload-outline"></ion-icon>
-          <ion-label>Editar Libros</ion-label>
+          <ion-label>Editar/Borrar Libros</ion-label>
         </ion-item>
     
-        <ion-item button [routerDirection]="'root'" [routerLink]="['/editar-borrar-libro-admin']" >
-          <ion-icon slot="start" name="trash-outline"></ion-icon>
-          <ion-label>Borrar Libros</ion-label>
-        </ion-item>
+    
         <ion-item button [routerDirection]="'root'" [routerLink]="['/login']">
           <ion-icon slot="start" name="exit-outline"></ion-icon>
           <ion-label>Cerrar Sesion</ion-label>
