--- a/src/app/pages/modificar-perfil-usuario/modificar-perfil-usuario.page.html
+++ b/src/app/pages/modificar-perfil-usuario/modificar-perfil-usuario.page.html
@@ -67,7 +67,7 @@
         style="--background: #dfaa64;"
         type="submit"
         (click)="ModificarPerfil()"
-        >Cambiar Perfil</ion-button
+        >Cambiar</ion-button
       >
     </form>
     <div class="container-p">
