--- a/src/app/pages/notfound/notfound.page.html
+++ b/src/app/pages/notfound/notfound.page.html
@@ -12,6 +12,6 @@
   <div class="container">
     <h1>Pagina no encontrada</h1>
     <img src="assets/img/notfound.png" alt="" class="image">
-    <ion-button shape="round" color="danger" [routerLink]="['/feed']">Volver al inicio</ion-button>
+    <ion-button shape="round" color="danger" [routerLink]="['/login']">Volver al inicio</ion-button>
   </div>
 </ion-content>
